--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
             </div>
             <div class="flex items-center space-x-6">
                 <nav class="hidden md:flex space-x-6">
-                    {/* Added id="home-link" */}
                     <a href="#" id="home-link" class="text-gray-300 hover:text-white transition duration-200">Home</a>
                     <a href="#products" class="text-gray-300 hover:text-white transition duration-200">Products</a>
                     <a href="#" class="text-gray-300 hover:text-white transition duration-200">Pricing</a>
-                    <a href="https://discord.gg/shillette" class="text-gray-300 hover:text-white transition duration-200">Discord</a>
+                    {/* Updated Discord Nav Link */}
+                    <a href="https://discord.gg/shillette" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:text-white transition duration-200">Discord</a>
                 </nav>
                 <div id="user-area" class="flex items-center">
                     <button id="login-button" class="bg-orange-600 hover:bg-orange-700 text-white text-sm font-medium py-2 px-4 rounded-lg transition duration-300 flex items-center space-x-2">
@@ -139,10 +139,11 @@
                     <button class="bg-orange-600 hover:bg-orange-700 text-white font-semibold py-3 px-8 rounded-lg transition duration-300 shadow-lg w-full sm:w-auto">
                         Purchase Product
                     </button>
-                    <button class="bg-gray-700 hover:bg-gray-600 text-white font-semibold py-3 px-8 rounded-lg transition duration-300 shadow-lg w-full sm:w-auto flex items-center justify-center space-x-2">
+                    {/* Updated Join Discord Button to be a link */}
+                    <a href="https://discord.gg/shillette" target="_blank" rel="noopener noreferrer" class="bg-gray-700 hover:bg-gray-600 text-white font-semibold py-3 px-8 rounded-lg transition duration-300 shadow-lg w-full sm:w-auto flex items-center justify-center space-x-2">
                         <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M19.54 6.04a13.27 13.27 0 00-2.66-1.89 12.4 12.4 0 00-1.6-1.3c-.4-.3-.82-.53-1.28-.71-.18-.07-.37-.13-.56-.19a.82.82 0 00-.5-.06 11.85 11.85 0 00-5.88 0 .82.82 0 00-.5.06c-.19.06-.38.12-.56.19-.46.18-.88.4-1.28.7a12.34 12.34 0 00-1.6 1.3A13.23 13.23 0 004.46 6.04 14.31 14.31 0 003 11.7c0 .1 0 .19.02.28a13.8 13.8 0 001.44 4.61c.56 1.1 1.24 2.1 2.04 3 .5.56 1.04 1.07 1.63 1.53.17.13.34.25.52.37a.8.8 0 00.57.19.78.78 0 00.57-.19 11.07 11.07 0 005.56 0 .78.78 0 00.57.19.8.8 0 00.57-.19c.18-.12.35-.24.52-.37a12.06 12.06 0 003.67-4.53 13.85 13.85 0 001.44-4.61c0-.1 0-.19.02-.28a14.31 14.31 0 00-1.46-5.66zm-4.61 7.03a1.93 1.93 0 01-3.86 0 1.93 1.93 0 013.86 0zm-5.72 0a1.93 1.93 0 01-3.86 0 1.93 1.93 0 013.86 0z"></path></svg>
                         <span>Join Discord</span>
-                    </button>
+                    </a>
                 </div>
                 <div class="grid grid-cols-2 sm:grid-cols-4 gap-8 max-w-3xl mx-auto text-gray-400">
                     <div class="text-center">
@@ -260,7 +261,7 @@
         const dashboardUserNameDisplay = document.getElementById('dashboard-user-name');
         const dashboardUserAvatarDisplay = document.getElementById('dashboard-user-avatar');
         const snowContainer = document.getElementById('snow-container');
-        const homeLink = document.getElementById('home-link'); // Get home link
+        const homeLink = document.getElementById('home-link');
 
         const simulatedUserData = {
             username: 'TestUser#0001',
@@ -334,10 +335,9 @@
              showMainContent();
         });
 
-        // Add event listener for home link
         if(homeLink) {
             homeLink.addEventListener('click', (event) => {
-                event.preventDefault(); // Prevent default '#' anchor behavior
+                event.preventDefault();
                 console.log('Home link clicked, showing main content...');
                 showMainContent();
             });
