--- a/index.html
+++ b/index.html
@@ -110,19 +110,19 @@
              overflow: hidden;
         }
 
-        #dashboard-content h2, #products-page-content h2 { @apply text-3xl md:text-4xl font-bold text-white text-center mb-12; }
-        #dashboard-content .dashboard-card { @apply bg-slate-800/80 backdrop-blur-sm p-6 rounded-lg shadow-lg; }
+        #dashboard-content h2, #products-page-content h2, #tickets-page-content h2 { @apply text-3xl md:text-4xl font-bold text-white text-center mb-12; }
+        #dashboard-content .dashboard-card, #tickets-page-content .ticket-card { @apply bg-slate-800/80 backdrop-blur-sm p-6 rounded-lg shadow-lg; }
 
         .paypal-button { @apply bg-sky-600 hover:bg-sky-700 text-white text-sm font-medium py-2 px-4 rounded-md transition duration-300 flex items-center justify-center space-x-2 w-full; }
 
-        #payment-message {
+        #payment-message, #ticket-message {
             position: fixed;
             bottom: 20px;
             left: 50%;
             transform: translateX(-50%);
-            @apply bg-green-600 text-white text-sm font-medium py-2 px-5 rounded-lg shadow-lg opacity-0 transition-opacity duration-500 ease-in-out z-50;
+            @apply bg-green-600 text-white text-sm font-medium py-2 px-5 rounded-lg shadow-lg opacity-0 transition-opacity duration-500 ease-in-out z-50 pointer-events-none;
         }
-         #payment-message.show {
+         #payment-message.show, #ticket-message.show {
              opacity: 1;
          }
 
@@ -131,7 +131,6 @@
             inset: 0;
             @apply bg-black/60 backdrop-blur-sm flex items-center justify-center z-50 transition-opacity duration-300 ease-in-out;
         }
-        /* Ensure overlay allows clicks when hidden/transparent */
         #loading-overlay.opacity-0 {
              @apply pointer-events-none;
         }
@@ -162,12 +161,20 @@
             @apply filter blur-sm transition-all duration-300 ease-in-out;
         }
 
+        /* Ticket specific styles */
+        .ticket-list-item {
+            @apply bg-slate-700/50 p-4 rounded-md mb-3 flex justify-between items-center;
+        }
+        .status-open { @apply bg-green-500 text-green-900 text-xs font-bold px-2 py-0.5 rounded-full; }
+        .status-closed { @apply bg-red-500 text-red-900 text-xs font-bold px-2 py-0.5 rounded-full; }
+
     </style>
 </head>
 <body class="min-h-screen flex flex-col">
 
     <div id="snow-container"></div>
     <div id="payment-message">Payment initiated...</div>
+    <div id="ticket-message">Ticket submitted!</div>
 
     <div id="loading-overlay" class="hidden opacity-0 pointer-events-none">
         <div class="loader">
@@ -187,6 +194,7 @@
                 <nav class="hidden md:flex space-x-6">
                     <a href="#" id="home-link" class="text-gray-300 hover:text-white transition duration-200">Home</a>
                     <a href="#" id="products-link" class="text-gray-300 hover:text-white transition duration-200">Products</a>
+                    <a href="#" id="tickets-link" class="text-gray-300 hover:text-white transition duration-200">Tickets</a>
                     <a href="https://discord.gg/shillette" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:text-white transition duration-200">Discord</a>
                 </nav>
                 <div id="user-area" class="flex items-center">
@@ -251,7 +259,7 @@
 
     <div id="products-page-content" class="hidden flex-grow container mx-auto px-6 py-10">
         <div class="flex justify-start mb-8">
-             <button id="back-to-home-button" class="text-orange-400 hover:text-orange-300 flex items-center space-x-2 transition duration-200">
+             <button id="back-to-home-button-products" class="text-orange-400 hover:text-orange-300 flex items-center space-x-2 transition duration-200">
                  <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path></svg>
                  <span>Back to Home</span>
              </button>
@@ -329,6 +337,60 @@
         </div>
     </div>
 
+    {/* New Tickets Page Content (Initially Hidden) */}
+     <div id="tickets-page-content" class="hidden flex-grow container mx-auto px-6 py-10">
+         <div class="flex justify-start mb-8">
+             <button id="back-to-home-button-tickets" class="text-orange-400 hover:text-orange-300 flex items-center space-x-2 transition duration-200">
+                 <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path></svg>
+                 <span>Back to Home</span>
+             </button>
+        </div>
+        <h2>Support Tickets</h2>
+        <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
+            {/* Existing Tickets List */}
+            <div class="lg:col-span-2 ticket-card">
+                 <h3 class="text-xl font-semibold text-white mb-4">My Tickets</h3>
+                 <div id="ticket-list" class="space-y-3 max-h-96 overflow-y-auto pr-2">
+                     {/* Mock Ticket Data */}
+                     <div class="ticket-list-item">
+                         <div>
+                             <p class="font-medium text-white">Ticket #1234: Login Issue</p>
+                             <p class="text-xs text-gray-400">Opened: 2 days ago</p>
+                         </div>
+                         <span class="status-open">Open</span>
+                     </div>
+                     <div class="ticket-list-item">
+                         <div>
+                             <p class="font-medium text-white">Ticket #1230: Payment Question</p>
+                             <p class="text-xs text-gray-400">Opened: 5 days ago</p>
+                         </div>
+                         <span class="status-closed">Closed</span>
+                     </div>
+                     {/* More mock tickets can be added */}
+                 </div>
+                 <p class="text-sm text-gray-500 mt-4">This is a simulation. Tickets are not saved.</p>
+            </div>
+            {/* Create New Ticket Form */}
+            <div class="lg:col-span-1 ticket-card">
+                 <h3 class="text-xl font-semibold text-white mb-4">Create New Ticket</h3>
+                 <form id="create-ticket-form">
+                     <div class="mb-4">
+                         <label for="ticket-subject" class="block text-sm font-medium text-gray-300 mb-1">Subject</label>
+                         <input type="text" id="ticket-subject" name="ticket-subject" required class="w-full bg-slate-700 border border-slate-600 rounded-md py-2 px-3 text-white focus:outline-none focus:ring-2 focus:ring-orange-500 focus:border-transparent placeholder-gray-500">
+                     </div>
+                     <div class="mb-4">
+                         <label for="ticket-message" class="block text-sm font-medium text-gray-300 mb-1">Message</label>
+                         <textarea id="ticket-message" name="ticket-message" rows="4" required class="w-full bg-slate-700 border border-slate-600 rounded-md py-2 px-3 text-white focus:outline-none focus:ring-2 focus:ring-orange-500 focus:border-transparent placeholder-gray-500"></textarea>
+                     </div>
+                     <button type="submit" id="create-ticket-button" class="w-full bg-orange-600 hover:bg-orange-700 text-white font-medium py-2.5 px-6 rounded-lg transition duration-300">
+                         Submit Ticket
+                     </button>
+                 </form>
+            </div>
+        </div>
+     </div>
+
+
     <footer class="bg-black mt-auto py-6 border-t border-gray-800">
         <div class="container mx-auto px-6 text-center text-gray-500 text-sm">
             <p>&copy; 2025 Shillette. All rights reserved.</p>
@@ -342,6 +404,7 @@
         const mainContent = document.getElementById('main-content');
         const dashboardContent = document.getElementById('dashboard-content');
         const productsPageContent = document.getElementById('products-page-content');
+        const ticketsPageContent = document.getElementById('tickets-page-content'); // New tickets page
         const userInfo = document.getElementById('user-info');
         const userNameDisplay = document.getElementById('user-name');
         const userAvatarDisplay = document.getElementById('user-avatar');
@@ -350,11 +413,17 @@
         const snowContainer = document.getElementById('snow-container');
         const homeLink = document.getElementById('home-link');
         const productsLink = document.getElementById('products-link');
-        const backToHomeButton = document.getElementById('back-to-home-button');
+        const ticketsLink = document.getElementById('tickets-link'); // Tickets nav link
+        const backToHomeButtonProducts = document.getElementById('back-to-home-button-products'); // Back button on products page
+        const backToHomeButtonTickets = document.getElementById('back-to-home-button-tickets'); // Back button on tickets page
         const paymentMessage = document.getElementById('payment-message');
+        const ticketMessage = document.getElementById('ticket-message'); // Ticket message div
         const purchaseButton = document.getElementById('purchase-button');
         const loadingOverlay = document.getElementById('loading-overlay');
-        const pageContainers = document.querySelectorAll('#main-content, #products-page-content, #dashboard-content'); // Target specific containers
+        const pageContainers = document.querySelectorAll('#main-content, #products-page-content, #dashboard-content, #tickets-page-content'); // Target all page containers
+        const createTicketForm = document.getElementById('create-ticket-form');
+        const ticketSubjectInput = document.getElementById('ticket-subject');
+        const ticketMessageInput = document.getElementById('ticket-message');
 
         const simulatedUserData = {
             username: 'TestUser#0001',
@@ -367,6 +436,7 @@
              mainContent.classList.add('hidden');
              dashboardContent.classList.add('hidden');
              productsPageContent.classList.add('hidden');
+             ticketsPageContent.classList.add('hidden'); // Hide tickets page
         }
 
         function showSectionWithLoading(showFunction) {
@@ -432,6 +502,21 @@
             localStorage.setItem('currentPage', 'products');
         }
 
+        function showTicketsPageInternal() {
+            ticketsPageContent.classList.remove('hidden');
+             if (localStorage.getItem('isLoggedIn') === 'true') {
+                 loginButton.classList.add('hidden');
+                 userInfo.classList.remove('hidden');
+                 userInfo.classList.add('flex');
+            } else {
+                 loginButton.classList.remove('hidden');
+                 userInfo.classList.add('hidden');
+                 userInfo.classList.remove('flex');
+            }
+            localStorage.setItem('currentPage', 'tickets');
+        }
+
+
         function showDashboard() {
             showSectionWithLoading(showDashboardInternal);
         }
@@ -440,6 +525,9 @@
         }
         function showProductsPage() {
              showSectionWithLoading(showProductsPageInternal);
+        }
+        function showTicketsPage() {
+             showSectionWithLoading(showTicketsPageInternal);
         }
 
 
@@ -468,12 +556,12 @@
             }
         }
 
-         function showPaymentMessage(message) {
-             if (!paymentMessage) return;
-             paymentMessage.textContent = message;
-             paymentMessage.classList.add('show');
+         function showGenericMessage(element, message) {
+             if (!element) return;
+             element.textContent = message;
+             element.classList.add('show');
              setTimeout(() => {
-                 paymentMessage.classList.remove('show');
+                 element.classList.remove('show');
              }, 3000);
          }
 
@@ -511,13 +599,29 @@
             });
         }
 
-         if(backToHomeButton) {
-            backToHomeButton.addEventListener('click', (event) => {
+        if(ticketsLink) {
+             ticketsLink.addEventListener('click', (event) => {
+                event.preventDefault();
+                console.log('Tickets link clicked, showing tickets page...');
+                showTicketsPage();
+            });
+        }
+
+         if(backToHomeButtonProducts) {
+            backToHomeButtonProducts.addEventListener('click', (event) => {
                 event.preventDefault();
                 console.log('Back button clicked, showing main content...');
                 showMainContent();
             });
         }
+         if(backToHomeButtonTickets) {
+            backToHomeButtonTickets.addEventListener('click', (event) => {
+                event.preventDefault();
+                console.log('Back button clicked, showing main content...');
+                showMainContent();
+            });
+        }
+
 
         if(userInfo) {
              userInfo.addEventListener('click', (event) => {
@@ -536,19 +640,41 @@
             });
         }
 
+        // Delegated listener for payment buttons
         document.addEventListener('click', (event) => {
             const target = event.target.closest('button');
             if (!target) return;
 
             const productId = target.dataset.productId;
-            if (!productId) return;
-
-            if (target.classList.contains('paypal-button')) {
+            if (productId && target.classList.contains('paypal-button')) {
                 event.preventDefault();
                 console.log(`Simulating PayPal payment for product: ${productId}`);
-                showPaymentMessage(`Redirecting to PayPal for ${productId}...`);
+                showGenericMessage(paymentMessage, `Redirecting to PayPal for ${productId}...`);
             }
         });
+
+        // Listener for create ticket form
+        if(createTicketForm) {
+            createTicketForm.addEventListener('submit', (event) => {
+                event.preventDefault();
+                const subject = ticketSubjectInput.value.trim();
+                const message = ticketMessageInput.value.trim();
+                if (subject && message) {
+                    console.log(`Simulating ticket creation: Subject - ${subject}`);
+                    showGenericMessage(ticketMessage, 'Ticket submitted successfully!');
+                    // Optionally add to mock list visually here (won't persist)
+                    createTicketForm.reset(); // Clear form
+                } else {
+                     showGenericMessage(ticketMessage, 'Please fill out both subject and message.');
+                     ticketMessage.classList.remove('bg-green-600');
+                     ticketMessage.classList.add('bg-red-600');
+                      setTimeout(() => {
+                         ticketMessage.classList.remove('bg-red-600');
+                         ticketMessage.classList.add('bg-green-600');
+                     }, 3000);
+                }
+            });
+        }
 
 
         document.addEventListener('DOMContentLoaded', () => {
@@ -562,7 +688,10 @@
                  showDashboardInternal();
             } else if (currentPage === 'products') {
                  showProductsPageInternal();
-            } else {
+            } else if (currentPage === 'tickets') {
+                 showTicketsPageInternal();
+            }
+            else {
                  showMainContentInternal();
             }
 
